The success message is now visible

--- a/Newsletter Form/index.html
+++ b/Newsletter Form/index.html
@@ -57,7 +57,7 @@
         </picture>
       </div>
 
-      <div class="success-msg" style="display: none">
+      <div class="success-msg">
         <img src="assets/images/icon-success.svg" />
         <h2>Thanks for subscribing!</h2>
         <p>
